tests/negative/pattern/non_exhaustive_sum.orng
// non_exhaustive_sum.orng:11:10: error: match over enum type is not exhaustive
//     match my_val {
//         ^
// non_exhaustive_sum.orng:9:29: note: term not handled: `d`
//     enum My_Sum { a, b, c, d }
//                            ^
// 
fn main() -> Int {
    enum My_Sum { a, b, c, d }
    let my_val: My_Sum = .a
    match my_val {
        .a => 4
        .b => 5
        .c => 6
    }
}